main -  se agrego el titulo.

--- a/maquetacion-tenis/src/assets/scss/_custom.scss
+++ b/maquetacion-tenis/src/assets/scss/_custom.scss
@@ -37,6 +37,11 @@
                         }
                     }
                 }
+                &:first-child {
+                    .nav-link {
+                        padding-left: 0;
+                    }
+                }
                 &:last-child {
                     .nav-link {
                         padding: 7px 6px;
