--- a/maquetacion-tenis/src/assets/scss/_custom.scss
+++ b/maquetacion-tenis/src/assets/scss/_custom.scss
@@ -51,3 +51,41 @@
         }
     }
 }
+
+.section-2 {
+    .carousel-1 {
+        .VueCarousel-slide {
+            position: relative;
+        }
+        .VueCarousel-pagination {
+            position: absolute;
+            bottom: 151px;
+            .VueCarousel-dot-container {
+                .VueCarousel-dot--active {
+                    background-color: #cbe346 !important;
+                }
+            }
+        }
+        .VueCarousel-navigation {
+            position: absolute;
+            bottom: 62px;
+            left: 50%;
+            button {
+                width: 54px;
+                height: 54px;
+                border: 1px solid #fff;
+                border-radius: 50%;
+                color: #fff;
+                margin: 0 -10px;
+                outline: none;
+                &:hover,
+                &:focus {
+                    background-color: #cbe346;
+                    -webkit-box-shadow: 0px 10px 16px -5px rgba(0, 0, 0, 0.81);
+                    -moz-box-shadow: 0px 10px 16px -5px rgba(0, 0, 0, 0.81);
+                    box-shadow: 0px 10px 16px -5px rgba(0, 0, 0, 0.81);
+                }
+            }
+        }
+    }
+}
