--- a/maquetacion-tenis/src/assets/scss/_custom.scss
+++ b/maquetacion-tenis/src/assets/scss/_custom.scss
@@ -59,7 +59,10 @@
         }
         .VueCarousel-pagination {
             position: absolute;
-            bottom: 151px;
+            bottom: 16px;
+            @media(min-width: 992px) {
+                bottom: 151px;
+            }
             .VueCarousel-dot-container {
                 .VueCarousel-dot--active {
                     background-color: #cbe346 !important;
@@ -67,16 +70,28 @@
             }
         }
         .VueCarousel-navigation {
+            @media(max-width: 413px) {
+                display: none;
+            }
             position: absolute;
-            bottom: 62px;
+            bottom: 50%;
             left: 50%;
+            @media(min-width: 768px) {
+                bottom: 15%;
+            }
+            @media(min-width: 992px) {
+                bottom: 62px;
+            }
             button {
                 width: 54px;
                 height: 54px;
                 border: 1px solid #fff;
                 border-radius: 50%;
                 color: #fff;
-                margin: 0 -10px;
+                margin: 0 -140px;
+                @media(min-width: 992px) {
+                    margin: 0 -10px;
+                }
                 outline: none;
                 &:hover,
                 &:focus {
